# gitlab-merge-request-bot

./: .env.example  .gitignore  CODE_REVIEW_USAGE.md  LICENSE  PROJECT.md  README.md  main.py  pyproject.toml  pytest.ini  summary_merge_request.prompt.yml  test_code_review.py
.github/workflows/: pylint.yml  ruff.yml
gitlab/: get_merge_request_detail.py  util.py
src/: __init__.py  cli.py  main.py
src/ai/: auth.py  get_prompt.py
src/ai/prompt/: code_review.md  summary_merge_request.md
src/gitlab/: auth.py  comment.py  diff_parser.py  merge_request.py  test_merge_request.py  test_util.py  util.py  weekly.py
src/utils/: __init__.py  logger.py  logger_example.py
src/workflow/: code_review.py  summary_merge_request.py
