[project]
name = "gitlab-merge-request-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "dotenv>=0.9.9",
    "openai",
    "pocketflow>=0.0.2",
    "pytest>=8.4.0",
    "pytest-watch>=4.2.0",
    "requests",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
