[project]
name = "gitlab-merge-request-bot"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "dotenv>=0.9.9",
    "openai",
    "pocketflow>=0.0.2",
    "pytest>=8.4.0",
    "pytest-watch>=4.2.0",
    "requests",
    "tomli>=1.2.0; python_version<'3.11'",
]

[project.scripts]
gitlab-merge-request-bot = "cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
